@@ -18,6 +18,7 @@ package io.gravitee.repository.management;
 import static io.gravitee.repository.utils.DateUtils.compareDate;
 import static io.gravitee.repository.utils.DateUtils.parse;
 import static java.util.Collections.singleton;
+import static java.util.stream.Collectors.toList;
 import static org.junit.Assert.*;
 
 import io.gravitee.repository.exceptions.TechnicalException;
@@ -183,8 +184,9 @@ public class ApiKeyRepositoryTest extends AbstractManagementRepositoryTest {
         assertNotNull("found api key", apiKeys);
         assertFalse("found api key", apiKeys.isEmpty());
         assertEquals("found 2 apikeys", 2, apiKeys.size());
-        assertTrue(Arrays.asList("findByCriteria1", "findByCriteria2").contains(apiKeys.get(0).getKey()));
-        assertTrue(Arrays.asList("findByCriteria1", "findByCriteria2").contains(apiKeys.get(1).getKey()));
+
+        List<String> expectedKeys = List.of("findByCriteria2", "findByCriteria1");
+        assertTrue(apiKeys.stream().map(ApiKey::getKey).collect(toList()).containsAll(expectedKeys));
         assertNotEquals(apiKeys.get(0).getKey(), apiKeys.get(1).getKey());
     }
 
@@ -203,7 +205,7 @@ public class ApiKeyRepositoryTest extends AbstractManagementRepositoryTest {
 
         assertNotNull("found api key", apiKeys);
         assertFalse("found api key", apiKeys.isEmpty());
-        assertEquals("found 1 api key " + apiKeys.stream().map(ApiKey::getKey).collect(Collectors.toList()), 1, apiKeys.size());
+        assertEquals("found 1 api key " + apiKeys.stream().map(ApiKey::getKey).collect(toList()), 1, apiKeys.size());
         assertEquals("findByCriteria1", apiKeys.get(0).getKey());
     }
 
@@ -215,11 +217,7 @@ public class ApiKeyRepositoryTest extends AbstractManagementRepositoryTest {
 
         assertEquals(3, apiKeys.size());
         assertTrue(
-            apiKeys
-                .stream()
-                .map(ApiKey::getId)
-                .collect(Collectors.toList())
-                .containsAll(Set.of("id-of-apikey-4", "id-of-apikey-6", "id-of-apikey-7"))
+            apiKeys.stream().map(ApiKey::getId).collect(toList()).containsAll(Set.of("id-of-apikey-4", "id-of-apikey-6", "id-of-apikey-7"))
         );
     }
 
@@ -231,9 +229,8 @@ public class ApiKeyRepositoryTest extends AbstractManagementRepositoryTest {
         assertFalse("found api key", apiKeys.isEmpty());
         assertEquals("found 3 apikeys", 3, apiKeys.size());
 
-        assertEquals("findByCriteria2", apiKeys.get(0).getKey());
-        assertEquals("findByCriteria1Revoked", apiKeys.get(1).getKey());
-        assertEquals("findByCriteria1", apiKeys.get(2).getKey());
+        List<String> expectedKeys = List.of("findByCriteria1", "findByCriteria2", "findByCriteria1Revoked");
+        assertTrue(apiKeys.stream().map(ApiKey::getKey).collect(toList()).containsAll(expectedKeys));
     }
 
     @Test
@@ -243,8 +240,9 @@ public class ApiKeyRepositoryTest extends AbstractManagementRepositoryTest {
         );
 
         assertEquals("found 2 apikeys", 2, apiKeys.size());
-        assertEquals("d449098d-8c31-4275-ad59-8dd707865a34", apiKeys.get(0).getKey());
-        assertEquals("d449098d-8c31-4275-ad59-8dd707865a35", apiKeys.get(1).getKey());
+
+        List<String> expectedKeys = List.of("d449098d-8c31-4275-ad59-8dd707865a34", "d449098d-8c31-4275-ad59-8dd707865a35");
+        assertTrue(apiKeys.stream().map(ApiKey::getKey).collect(toList()).containsAll(expectedKeys));
     }
 
     @Test
@@ -252,8 +250,9 @@ public class ApiKeyRepositoryTest extends AbstractManagementRepositoryTest {
         List<ApiKey> apiKeys = apiKeyRepository.findByCriteria(new Builder().expireAfter(30019401755L).build());
 
         assertEquals("found 2 apikeys", 2, apiKeys.size());
-        assertEquals("d449098d-8c31-4275-ad59-8dd707865a34", apiKeys.get(0).getKey());
-        assertEquals("d449098d-8c31-4275-ad59-8dd707865a35", apiKeys.get(1).getKey());
+
+        List<String> expectedKeys = List.of("d449098d-8c31-4275-ad59-8dd707865a34", "d449098d-8c31-4275-ad59-8dd707865a35");
+        assertTrue(apiKeys.stream().map(ApiKey::getKey).collect(toList()).containsAll(expectedKeys));
     }
 
     @Test
@@ -261,18 +260,20 @@ public class ApiKeyRepositoryTest extends AbstractManagementRepositoryTest {
         List<ApiKey> apiKeys = apiKeyRepository.findByCriteria(new Builder().expireBefore(30019401755L).build());
 
         assertEquals("found 2 apikeys", 2, apiKeys.size());
-        assertEquals("findByCriteria2", apiKeys.get(0).getKey());
-        assertEquals("findByCriteria1", apiKeys.get(1).getKey());
+
+        List<String> expectedKeys = List.of("findByCriteria2", "findByCriteria1");
+        assertTrue(apiKeys.stream().map(ApiKey::getKey).collect(toList()).containsAll(expectedKeys));
     }
 
     @Test
     public void findByCriteria_should_read_subscriptions_list() throws Exception {
         List<ApiKey> apiKeys = apiKeyRepository.findByCriteria(new Builder().expireAfter(30019401755L).build());
+        apiKeys.sort(Comparator.comparing(apikey -> apikey.getSubscriptions().size()));
 
-        assertEquals(2, apiKeys.get(0).getSubscriptions().size());
-        assertTrue(apiKeys.get(0).getSubscriptions().containsAll(Set.of("subscription2", "subscriptionX")));
-        assertEquals(1, apiKeys.get(1).getSubscriptions().size());
-        assertEquals("subscription1", apiKeys.get(1).getSubscriptions().get(0));
+        assertEquals(1, apiKeys.get(0).getSubscriptions().size());
+        assertEquals("subscription1", apiKeys.get(0).getSubscriptions().get(0));
+        assertEquals(2, apiKeys.get(1).getSubscriptions().size());
+        assertTrue(apiKeys.get(1).getSubscriptions().containsAll(Set.of("subscription2", "subscriptionX")));
     }
 
     @Test
